Fixed random horizontal scroll bar

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
 }
 body {
   background: #282c34;
+  overflow-x: hidden;
 }
 
 .App {
@@ -20,9 +21,9 @@ body {
   list-style: none;
   display: flex;
   align-items: center;
-  max-width: 100%;
-  overflow-x: hidden;
+  max-width: 100vw;
   scroll-behavior: auto;
+  overflow-x: hidden;
 
   margin: 0;
   padding: 0;
@@ -32,10 +33,6 @@ body {
   border-radius: 4px;
   white-space: nowrap;
 
-  /*width: 400px;*/
-  /*padding-left: 200px;*/
-  /*margin: 0;*/
-  /*padding: 0;*/
 }
 
 .Page {
@@ -45,6 +42,4 @@ body {
   justify-content: center;
   align-items: center;
 
-  /*margin: 0;*/
-  /*padding: 0;*/
 }
